@@ -1,1 +1,10 @@
 # asg1-lao-h-c-va-c-u-vang
+Thư viện sử dụng : voicerss, jfx 11, jfoenix, jmetro
+Class Translator sử dụng mã nguồn mở trên stackoverflow
+Các class skin viết lại từ mã nguồn jmetro vì ko tương thích với jdk 11
+Phiên bản jdk, jfx: openjdk-11-jdk, jfx 11
+Link file .db: https://drive.google.com/file/d/1KB52n7YmuCiUOKqjbnBYr4-K_ol9kqb0/view?usp=sharing
+Câu lệnh để chạy file jar: java --module-path /home/quanghuy/Downloads/javafx-sdk-11/lib/ --add-modules javafx.controls,javafx.web -jar asg1-lao-h-c-va-c-u-vang.jar
+Các file .css copy từ mã nguồn mở của jmetro và jfoenix
+Cần có jfx 11 để chạy chương trình : https://jdk.java.net/11/
+
